employee-management-deploy-frontend.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: employee-management-frontend
    component: "frontend"
  name: <username>-employee-management-frontend-deployment
  namespace: <username>
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 50%
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: employee-management-frontend
        component: "frontend"
    spec:
      containers:
        - name: employee-management-frontend
          image: <dockerhub_username>/angular-hello:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
      restartPolicy: Always
