nginx-deployment.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: nginx
    component: "webserver"
  name: <username>-nginx-deployment
  namespace: <username>
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 50%
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: nginx
        component: "webserver"
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
      restartPolicy: Always
