employee-management-svc-backend.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: employee-management-backend
    component: "backend"
  name: <username>-employee-management-backend-service
  namespace: <username>
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  type: ClusterIP
  selector:
    app: employee-management-backend
    component: "backend"
