employee-management-svc-frontend.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: employee-management-frontend
    component: "frontend"
  name: <username>-employee-management-frontend-service
  namespace: <username>
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  type: ClusterIP
  selector:
    app: employee-management-frontend
    component: "frontend"
