nginx-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx
    component: "webserver"
  name: <username>-nginx-service
  namespace: <username>
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  type: ClusterIP
  selector:
    app: nginx
    component: "webserver"
