employee-management-ing-backend.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: <username>-employee-management-backend-ingress
  namespace: <username>
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /<username>backend
spec:
  rules:
    - host: kubernetes-elb-depauna-127443764.eu-west-1.elb.amazonaws.com
      http:
        paths:
          - backend:
              serviceName: <username>-employee-management-backend-service
              servicePort: 8080
            path: /<username>backend
